add_executable(5_A A.cpp)
add_executable(5_B B.cpp)
add_executable(5_C C.cpp)
add_executable(5_F F.cpp)
add_executable(5_H H.cpp)
add_executable(5_I I.cpp)
add_executable(5_J J.cpp)
add_executable(5_K K.cpp)
add_executable(5_Q Q.cpp)
add_executable(5_L L.cpp)
add_executable(5_M M.cpp)
add_executable(5_G G.cpp)

